--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,41 +2,126 @@ name: Build
 
 on:
     push:
-        branches: [dev, preview, staging, main]
+        branches: [alpha, beta, rc, main]
     workflow_dispatch:
 
 jobs:
-    # --- Set Version ---
-    set-version:
+    # --- Release ---
+    release:
+        name: Release
         runs-on: ubuntu-latest
-        outputs:
-            version: ${{ steps.setver.outputs.version }}
-            stage: ${{ steps.setver.outputs.stage }}
-            commit: ${{ steps.setver.outputs.commit }}
+        permissions:
+            contents: write
         steps:
             - uses: actions/checkout@v4
-            - name: Set Version
-              id: setver
-              uses: cruciblehq/.github/actions/set-version@main
+              with:
+                  fetch-depth: 0
+                  persist-credentials: false
 
-    # --- Validate ---
-    validate-source:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
             - uses: actions/setup-go@v5
               with:
                   go-version: "1.25.x"
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: 24
+
             - name: Verify Go modules
               uses: cruciblehq/.github/actions/verify-go-modules@main
+
             - name: Run Go tests and coverage
               uses: cruciblehq/.github/actions/go-test-coverage@main
               with:
                   coverage-threshold: "5"
 
-    # --- Publish Coverage ---
-    publish-coverage:
-        needs: validate-source
+            - name: Generate Go reference docs
+              run: |
+                  go install github.com/princjef/gomarkdoc/cmd/gomarkdoc@latest
+                  mkdir -p docs
+                  gomarkdoc -u -o docs/index.md ./...
+
+            - name: Upload docs artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: docs
+                  path: docs/
+
+            - name: Semantic Release
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GIT_AUTHOR_NAME: "github-actions[bot]"
+                  GIT_AUTHOR_EMAIL: "github-actions[bot]@users.noreply.github.com"
+                  GIT_COMMITTER_NAME: "github-actions[bot]"
+                  GIT_COMMITTER_EMAIL: "github-actions[bot]@users.noreply.github.com"
+              run: |
+                  npx --yes \
+                    -p semantic-release@^23.0.0 \
+                    -p @semantic-release/changelog@^6.0.3 \
+                    -p @semantic-release/commit-analyzer@^13.0.0 \
+                    -p @semantic-release/exec@^6.0.3 \
+                    -p @semantic-release/git@^10.0.1 \
+                    -p @semantic-release/github@^10.0.0 \
+                    -p @semantic-release/release-notes-generator@^14.0.0 \
+                    -p conventional-changelog-conventionalcommits@^8.0.0 \
+                    semantic-release
+
+            - name: Check for release
+              id: release
+              run: |
+                  if [ -f .release-version ]; then
+                    VERSION=$(cat .release-version)
+                    echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+                    echo "released=true" >> "$GITHUB_OUTPUT"
+                    echo "Released version: $VERSION"
+                  else
+                    echo "released=false" >> "$GITHUB_OUTPUT"
+                    echo "No new release"
+                  fi
+
+            - name: Build binaries
+              if: steps.release.outputs.released == 'true'
+              run: |
+                  VERSION="${{ steps.release.outputs.version }}"
+                  COMMIT=$(git rev-parse --short HEAD)
+                  if [ "${{ github.ref_name }}" = "main" ]; then
+                    STAGE="release"
+                  else
+                    STAGE="${{ github.ref_name }}"
+                  fi
+                  LDFLAGS="-X github.com/cruciblehq/cruxd/internal.version=${VERSION} \
+                           -X github.com/cruciblehq/cruxd/internal.stage=${STAGE} \
+                           -X github.com/cruciblehq/cruxd/internal.gitCommit=${COMMIT}"
+
+                  for GOARCH in amd64 arm64; do
+                    mkdir -p "dist/linux-${GOARCH}"
+                    GOOS=linux GOARCH=${GOARCH} go build -v \
+                      -ldflags "${LDFLAGS}" \
+                      -o "dist/linux-${GOARCH}/cruxd" ./cmd/cruxd
+                    tar -czf "dist/cruxd-linux-${GOARCH}.tar.gz" \
+                      -C "dist/linux-${GOARCH}" cruxd
+                  done
+
+                  cd dist && sha256sum cruxd-linux-*.tar.gz > checksums.txt
+                  echo "Archives:"
+                  ls -lh cruxd-linux-*.tar.gz checksums.txt
+
+            - name: Upload release assets
+              if: steps.release.outputs.released == 'true'
+              env:
+                  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              run: |
+                  TAG="v${{ steps.release.outputs.version }}"
+                  gh release upload "$TAG" \
+                    dist/cruxd-linux-amd64.tar.gz \
+                    dist/cruxd-linux-arm64.tar.gz \
+                    dist/checksums.txt \
+                    --repo "$GITHUB_REPOSITORY"
+
+    # --- Publish Pages ---
+    publish-pages:
+        name: Publish Pages
+        needs: release
+        if: github.ref_name == 'main'
         runs-on: ubuntu-latest
         permissions:
             contents: write
@@ -50,42 +135,16 @@ jobs:
               with:
                   name: coverage-report
                   path: coverage
+            - uses: actions/download-artifact@v4
+              with:
+                  name: docs
+                  path: docs
             - name: Prepare gh-pages
               run: |
                   mkdir public
-                  cp -r coverage badges public/
+                  cp -r coverage badges docs public/
             - name: Publish to GitHub Pages
               uses: peaceiris/actions-gh-pages@4f9cc6602d3f66b9c108549d475ec49e8ef4d45e
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: ./public
-
-    # --- Build ---
-    build:
-        needs: [set-version, validate-source]
-        strategy:
-            fail-fast: true
-            matrix:
-                goarch: [amd64, arm64]
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-            - uses: actions/setup-go@v5
-              with:
-                  go-version: "1.25.x"
-            - uses: cruciblehq/.github/actions/verify-go-modules@main
-
-            - name: Build linux/${{ matrix.goarch }}
-              run: |
-                  mkdir -p dist
-                  GOOS=linux GOARCH=${{ matrix.goarch }} \
-                  go build -v -ldflags "\
-                    -X github.com/cruciblehq/cruxd/internal.version=${{ needs.set-version.outputs.version }} \
-                    -X github.com/cruciblehq/cruxd/internal.stage=${{ needs.set-version.outputs.stage }} \
-                    -X github.com/cruciblehq/cruxd/internal.gitCommit=${{ needs.set-version.outputs.commit }}" \
-                  -o dist/cruxd-linux-${{ matrix.goarch }} ./cmd/cruxd
-
-            - uses: actions/upload-artifact@v4
-              with:
-                  name: cruxd-linux-${{ matrix.goarch }}
-                  path: dist/
