--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -42,6 +42,15 @@ jobs:
           owner: cruciblehq
           repositories: homebrew-tap
 
+      - name: Debug token permissions
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          echo "Repositories accessible:"
+          gh api /installation/repositories --jq '.repositories[].full_name'
+          echo "Permissions on homebrew-tap:"
+          gh api /repos/cruciblehq/homebrew-tap --jq '.permissions'
+
       - name: Update Homebrew formula
         env:
           TAP_TOKEN: ${{ steps.app-token.outputs.token }}
