--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,103 +1,105 @@
 name: Publish
 
 on:
-    release:
-        types: [published]
+  release:
+    types: [published]
 
 jobs:
-    homebrew:
-        name: Update Homebrew Formula
-        runs-on: ubuntu-latest
-        if: "!github.event.release.prerelease"
-        steps:
-            - name: Get release info
-              id: release
-              run: |
-                  TAG="${{ github.event.release.tag_name }}"
-                  VERSION="${TAG#v}"
-                  echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-                  echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+  homebrew:
+    name: Update Homebrew Formula
+    runs-on: ubuntu-latest
+    if: "!github.event.release.prerelease"
+    steps:
+      - name: Get release info
+        id: release
+        run: |
+          TAG="${{ github.event.release.tag_name }}"
+          VERSION="${TAG#v}"
+          echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
-            - name: Download release assets
-              env:
-                  GH_TOKEN: ${{ github.token }}
-              run: |
-                  TAG="${{ steps.release.outputs.tag }}"
-                  gh release download "$TAG" \
-                    --repo "$GITHUB_REPOSITORY" \
-                    --pattern "cruxd-linux-*.tar.gz"
+      - name: Download release assets
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          TAG="${{ steps.release.outputs.tag }}"
+          gh release download "$TAG" \
+            --repo "$GITHUB_REPOSITORY" \
+            --pattern "cruxd-linux-*.tar.gz"
 
-            - name: Compute checksums
-              id: checksums
-              run: |
-                  echo "sha256_amd64=$(sha256sum cruxd-linux-amd64.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
-                  echo "sha256_arm64=$(sha256sum cruxd-linux-arm64.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
+      - name: Compute checksums
+        id: checksums
+        run: |
+          echo "sha256_amd64=$(sha256sum cruxd-linux-amd64.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
+          echo "sha256_arm64=$(sha256sum cruxd-linux-arm64.tar.gz | awk '{print $1}')" >> "$GITHUB_OUTPUT"
 
-            - name: Generate GitHub App token
-              id: app-token
-              uses: actions/create-github-app-token@v2
-              with:
-                  app-id: ${{ secrets.APP_ID }}
-                  private-key: ${{ secrets.APP_PRIVATE_KEY }}
-                  owner: cruciblehq
-                  repositories: homebrew-tap
+      - name: Generate GitHub App token
+        id: app-token
+        uses: actions/create-github-app-token@v2
+        with:
+          app-id: ${{ secrets.APP_ID }}
+          private-key: ${{ secrets.APP_PRIVATE_KEY }}
+          owner: cruciblehq
+          repositories: homebrew-tap
 
-            - name: Update Homebrew formula
-              env:
-                  TAP_TOKEN: ${{ steps.app-token.outputs.token }}
-              run: |
-                  VERSION="${{ steps.release.outputs.version }}"
-                  TAG="${{ steps.release.outputs.tag }}"
-                  SHA256_AMD64="${{ steps.checksums.outputs.sha256_amd64 }}"
-                  SHA256_ARM64="${{ steps.checksums.outputs.sha256_arm64 }}"
-                  BASE_URL="https://github.com/cruciblehq/cruxd/releases/download/${TAG}"
+      - name: Update Homebrew formula
+        env:
+          TAP_TOKEN: ${{ steps.app-token.outputs.token }}
+        run: |
+          VERSION="${{ steps.release.outputs.version }}"
+          TAG="${{ steps.release.outputs.tag }}"
+          SHA256_AMD64="${{ steps.checksums.outputs.sha256_amd64 }}"
+          SHA256_ARM64="${{ steps.checksums.outputs.sha256_arm64 }}"
+          BASE_URL="https://github.com/cruciblehq/cruxd/releases/download/${TAG}"
 
-                  cat > cruxd.rb << 'FORMULA'
-                  class Cruxd < Formula
-                    desc "The Crucible daemon."
-                    homepage "https://github.com/cruciblehq/cruxd"
-                    version "VERSION_PLACEHOLDER"
-                    url "BASE_URL_PLACEHOLDER/cruxd-linux-amd64.tar.gz"
-                    sha256 "SHA256_AMD64_PLACEHOLDER"
+          cat > cruxd.rb << 'FORMULA'
+          class Cruxd < Formula
+            desc "The Crucible daemon."
+            homepage "https://github.com/cruciblehq/cruxd"
+            version "VERSION_PLACEHOLDER"
+            url "BASE_URL_PLACEHOLDER/cruxd-linux-amd64.tar.gz"
+            sha256 "SHA256_AMD64_PLACEHOLDER"
 
-                    depends_on :linux
+            depends_on :linux
 
-                    on_linux do
-                      on_arm do
-                        url "BASE_URL_PLACEHOLDER/cruxd-linux-arm64.tar.gz"
-                        sha256 "SHA256_ARM64_PLACEHOLDER"
-                      end
-                    end
+            on_linux do
+              on_arm do
+                url "BASE_URL_PLACEHOLDER/cruxd-linux-arm64.tar.gz"
+                sha256 "SHA256_ARM64_PLACEHOLDER"
+              end
+            end
 
-                    def install
-                      bin.install "cruxd"
-                    end
+            def install
+              bin.install "cruxd"
+            end
 
-                    test do
-                      assert_match version.to_s, shell_output("#{bin}/cruxd version")
-                    end
-                  end
-                  FORMULA
+            test do
+              assert_match version.to_s, shell_output("#{bin}/cruxd version")
+            end
+          end
+          FORMULA
 
-                  sed -i "s|VERSION_PLACEHOLDER|${VERSION}|g" cruxd.rb
-                  sed -i "s|BASE_URL_PLACEHOLDER|${BASE_URL}|g" cruxd.rb
-                  sed -i "s|SHA256_AMD64_PLACEHOLDER|${SHA256_AMD64}|g" cruxd.rb
-                  sed -i "s|SHA256_ARM64_PLACEHOLDER|${SHA256_ARM64}|g" cruxd.rb
+          sed -i "s|VERSION_PLACEHOLDER|${VERSION}|g" cruxd.rb
+          sed -i "s|BASE_URL_PLACEHOLDER|${BASE_URL}|g" cruxd.rb
+          sed -i "s|SHA256_AMD64_PLACEHOLDER|${SHA256_AMD64}|g" cruxd.rb
+          sed -i "s|SHA256_ARM64_PLACEHOLDER|${SHA256_ARM64}|g" cruxd.rb
 
-                  # Remove leading whitespace from heredoc
-                  sed -i 's/^          //' cruxd.rb
+          # Remove leading whitespace from heredoc
+          sed -i 's/^          //' cruxd.rb
 
-                  echo "Generated formula:"
-                  cat cruxd.rb
+          echo "Generated formula:"
+          cat cruxd.rb
 
-                  # Clone tap repo and push updated formula
-                  git clone "https://x-access-token:${TAP_TOKEN}@github.com/cruciblehq/homebrew-tap.git" tap
-                  mkdir -p tap/Formula
-                  cp cruxd.rb tap/Formula/cruxd.rb
+          # Clone tap repo and push updated formula
+          git clone "https://x-access-token:${TAP_TOKEN}@github.com/cruciblehq/homebrew-tap.git" tap
+          mkdir -p tap/Formula
+          cp cruxd.rb tap/Formula/cruxd.rb
 
-                  cd tap
-                  git config user.name "github-actions[bot]"
-                  git config user.email "github-actions[bot]@users.noreply.github.com"
-                  git add Formula/cruxd.rb
-                  git commit -m "cruxd ${VERSION}"
-                  git push
+          cd tap
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Formula/cruxd.rb
+          git commit -m "cruxd ${VERSION}"
+          git tag "cruxd/v${VERSION}"
+          git push
+          git push origin "cruxd/v${VERSION}"
